// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagementConsoleNav tests Snapshot testing with jobs management props 1`] = `
<ManagementConsoleNav
  pathname="/JobsManagement"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-2"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="process-instances-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                  >
                    Process Instances
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                  >
                    Jobs Management
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</ManagementConsoleNav>
`;

exports[`ManagementConsoleNav tests Snapshot testing with process list props 1`] = `
<ManagementConsoleNav
  pathname="/ProcessInstances"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-1"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="process-instances-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                  >
                    Process Instances
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                  >
                    Jobs Management
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</ManagementConsoleNav>
`;
